--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "reset": "npm run rollback && npm run migrate && npm run seed"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
@@ -21,8 +22,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "knex": "^0.21.18",
     "sqlite3": "^5.0.2"
